--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FotballAp</string>
+    <string name="app_name">FootballApp</string>
 
     <string name="title_activity_dsffds">dsffds</string>
     <string name="dummy_button">Dummy Button</string>
