--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_menu">Menu</string>
+    <string name="do_not_move">Do not move</string>
+    <string name="Sign">Войти</string>
 </resources>
