--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_menu">Menu</string>
     <string name="do_not_move">Do not move</string>
     <string name="Sign">Войти</string>
+    <string name="name">Введите имя</string>
 </resources>
