--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="do_not_move">Do not move</string>
     <string name="Sign">Войти</string>
     <string name="name">Введите имя</string>
+    <string name="about">Данное приложение было разработано в учебных целях. Оно предоставляет возможость игрокам любого уравня участвовать в турнирах.Есть возможность просматривать статистику, турнирную таблицу, рейтинг.
+        Также у пользователя всегда есть доступ к календарю будущих и прошедших матчей. </string>
 </resources>
