--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="name">Введите имя</string>
     <string name="about">Данное приложение было разработано в учебных целях. Оно предоставляет возможость игрокам любого уравня участвовать в турнирах.Есть возможность просматривать статистику, турнирную таблицу, рейтинг.
         Также у пользователя всегда есть доступ к календарю будущих и прошедших матчей. </string>
+    <string name="teamname">Введите название команды</string>
+    <string name="find">Поиск команды:</string>
 </resources>
